# magus

./: .gitignore  .golangci.yml  .markdownlint.json  .markdownlintignore  .mockery.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.static  LICENSE  MAGUS.md  README.md  _typos.toml  badge.buzz  cache_ops.go  config_env_test.go  cross_inputs_test.go  describe.go  describe_test.go  doc.go  errors.go  go.mod  go.sum  go.tool.mod  go.tool.sum  graph.go  insights.go  invocation.go  knowledge.go  knowledge_symbols_test.go  knowledge_test.go  knowledge_vcs_test.go  limiter.go  lock.go  lock_test.go  magus.go  magus.yaml  (+25 more)
.claude/: launch.json  settings.json
benchmarks/: .gitignore  BENCHMARKS.md  README.md  bench.sh
benchmarks/fixtures/ts/templates/: MODULE.bazel  lage.config.js  nx.json
benchmarks/fixtures/ts/templates/.moon/: toolchain.yml  workspace.yml
blog/: 2026-07-01-hello-blog.md
console/: .gitignore  .npmrc  PATTERNFLY.md  biome.json  index.html  magusfile.buzz  manifest.webmanifest  package.json  pnpm-lock.yaml  sw.js  test-setup.mjs  tsconfig.json
docs/: .gitignore  .npmrc  MAGUS.md  affected.md  agents.md  biome.json  breaking-changes.md  browser-bridge.md  buf.gen.yaml  cache.md  charms.md  ci.md  concurrency.md  config.md  conventions.md  daemon.md  debugging.md  dependencies.md  diagnostics.md  documentation.md  download.md  engines.md  faq.md  flaky-builds.md  from-nx.md  getting-started.md  glossary.md  graph.json  insight.md  install.md  knowledge.md  magusfile.buzz  mcp.md  operations.md  package.json  (+38 more)
(+2550 files in other folders)
